# ExampleMoneyPlugin

./: pyproject.toml  requirements.txt
src/endstone_economy/: __init__.py  economy.py
src/endstone_economy/src/: database.py
